CHANGELOG
=========
+-----------------------+
| VERSION: 0.5.4        |
+-----------------------+
BUGFIXES

IMPROVEMENTS
22-11-05    Added ServiceLocator class and fixed db independence for testing
21-11-05    Factored out setup of table name aliases, these are not set on a per-module
            basis in the file 'tableAliases.ini' parsed at setup time.
14-11-05    Added version-checker routine to Maintenance manager
14-11-05    Implemented xml-rpc gateway for easy creation of Seagull web services
14-11-05    Improved integration of page offset id in seagull SEF urls
            (Andreas Singer)

+-----------------------+
| VERSION: 0.5.3        |
+-----------------------+
BUGFIXES
11-11-05    Fix for &-related prob in thunderbird parsing of RSS
09-11-05    Fixed small bug where backdating date comboboxes wasn't working
            (Werner Krauss)
31-10-05	Fixed broken config calls in templates
26-10-05    Registration emails are no longer CCed to admin, separate notification
            is sent.

IMPROVEMENTS
11-11-05    Rewrote installer to handle tasks, easy to extend
11-11-05    Added $conf[site][sessionInUrl] key and set to false to overcome
            t-bird RSS bug listed above
11-11-05    Reduced dependency on sections by modifying block listing query to use
            LEFT JOIN instead of WHERE clauses (Julien Casanova)
10-11-05    Moved MaintenanceMgr to 'default' module
10-11-05    Moved all SQL data to respective modules (modules, perms, role_perm
            assignments) by creating an auto-increment token in data and using
            dynamic inserts
09-11-05    Added ability for sql parser to auto-increment records when PK is marked
            with {SGL_NEXT_ID} token
09-11-05    Added ability to add all or minimum modules
09-11-05    Added ability to remove frontScriptName and have even clearner urls than
            previously, eg, now available: http://example.com/user/login/