@@ -721,8 +721,15 @@ class SGL_MainProcess extends SGL_ProcessRequest
 
         //  build view
         $templateEngine = ucfirst($conf['site']['templateEngine']);
-        $templateClass = 'SGL_Html'.$templateEngine.'RendererStrategy';
-        $view = new SGL_HtmlView($output, new $templateClass());
+        $rendererClass = 'SGL_Html'.$templateEngine.'RendererStrategy';
+        $rendererFile = 'Html'.$templateEngine.'RendererStrategy.php';
+        if (file_exists(SGL_LIB_DIR .'/SGL/'. $rendererFile)) {
+        	require_once SGL_LIB_DIR .'/SGL/'. $rendererFile;
+        } else {
+        	PEAR::raiseError('Could not find renderer', 
+        		SGL_ERROR_NOFILE, PEAR_ERROR_DIE);
+        }
+        $view = new SGL_HtmlView($output, new $rendererClass());
         echo $view->render();
     }
 }
@@ -787,3 +794,4 @@ class SGL_Void extends SGL_ProcessRequest
     }
 }
 ?>
+
